# ai_tax_agent

./: .cursorrules  .gitattributes  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini  tax_data.db
ai_tax_agent/: agents.py  llm_utils.py  outputs.py  settings.py  text_utils.py  tracker.py
ai_tax_agent/database/: models.py  session.py  versioning.py
ai_tax_agent/parsers/: json_utils.py  pdf_parser_utils.py  xml_parser_utils.py
ai_tax_agent/tools/: analysis_tools.py  chroma_tools.py  db_tools.py  generation_tools.py  state_tools.py
alembic/: env.py
alembic/versions/: 0c6311150b0a_add_referenced_sections_to_irs_bulletin_.py  0ccadec0375f_add_form_field_statistics_table.py  29a85ca87e53_initial_migration_setup.py  2fd7b3c22451_add_us_code_section_table.py  351c04089af7_add_z_score_fields_to_us_code_sections.py  369c83f5e6e4_add_us_code_section_revised_table.py  378a4bbf05e9_add_unique_constraint_to_section_number_.py  41a7403a2925_remove_description_from_irs_bulletin_.py  44d2f0400188_remove_page_start_and_page_end_from_irs_.py  4646bdd2f0d3_add_section_history_table_and_revised_.py  59b5151e47d5_add_form_instructions_tables.py  63ffaa962d7a_add_index_to_form_fields_instruction_id.py  (+8 more)
chroma_data/: chroma.sqlite3
data/: complexity.json  usc26.xml
prompts/: analyze_exemption_impact.txt  associate_amounts_multimodal.txt  extract_blue_amounts.txt  extract_blue_amounts_v2.txt  identify_exemptions.txt  score_section_complexity.txt  tax_editor_final.txt  tax_simplify_prompt.txt
scripts/: analyze_amendments.py  analyze_code_size.py  analyze_complexity_distribution.py  analyze_page_colors.py  analyze_pdf_mcid.py  analyze_section_impact.py  analyze_section_mentions.py  calculate_aggregate_impact.py  calculate_section_z_scores.py  download_irb_bulletins.py  evaluate_prompts.py  export_complexity_data.py  extract_form_fields.py  extract_form_fields_llm.py  fix_kept_sections.py  fix_redraft_sections.py  identify_exemptions.py  index_instructions_chroma.py  index_sections_chroma.py  ingest_cbo_data_to_chroma.py  link_bulletins_to_sections.py  link_stats_to_code.py  parse_bulletins.py  parse_pdf_layout.py  parse_pdf_to_json.py  parse_tax_code.py  parse_tax_stats_to_console.py  plot_complexity_distribution.py  plot_version_sizes.py  run_tax_editor.py  run_tax_editor_v2.py  score_section_complexity.py  scrape_irs_instructions.py  test_simplification.py  visualize_amendments.py
(+37 files in other folders)
